--- a/bower.json
+++ b/bower.json
@@ -35,6 +35,7 @@
     "handlebars": "~1.3.0",
     "ubilabs-geocomplete": "~1.5.1",
     "bootbox": "~4.3.0",
-    "bootstrap-tagsinput": "TimSchlechter/bootstrap-tagsinput#master"
+    "bootstrap-tagsinput": "bootstrap-tagsinput/bootstrap-tagsinput#main"
+
   }
 }
