--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "body-parser": "^1.0.0",
-    "express": "^3.4.8",
+    "compression": "^1.8.1",
+    "express": "^3.21.2",
     "express-handlebars": "^3.0.0",
     "moment": "^2.6.0",
     "serve-favicon": "^2.1.3"
@@ -36,21 +37,22 @@
   "devDependencies": {
     "bower": "^1.3.9",
     "grunt": "^0.4.4",
-    "grunt-bower-task": "^0.4.0",
+    "grunt-bower-task": "^0.6.2",
     "grunt-concurrent": "^0.5.0",
     "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-jshint": "^3.2.0",
     "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-nodeunit": "^0.4.0",
+    "grunt-contrib-nodeunit": "^5.0.0",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.0",
-    "grunt-jsbeautifier": "^0.2.7",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-jsbeautifier": "^0.2.13",
     "grunt-shell": "^0.6.4",
+    "jshint": "^2.13.6",
     "jshint-stylish": "^0.1.5",
     "load-grunt-tasks": "^0.4.0",
     "phant": "https://github.com/idcrook/phant#master",
     "phant-keychain-hex": "https://github.com/idcrook/phant-keychain-hex#main",
-    "phant-meta-test": "^2.1.3",
+    "phant-meta-test": "https://github.com/idcrook/phant-meta-test#main",
     "request": "^2.36.0",
     "time-grunt": "^0.2.10"
   },
