--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "express": "^3.21.2",
     "express-handlebars": "^3.0.0",
     "moment": "^2.6.0",
-    "serve-favicon": "^2.1.3"
+    "serve-favicon": "^2.1.3",
+    "serve-static": "^2.2.1"
   },
   "engines": {
-    "node": "^0.10.30"
+    "node": "v20.*"
   },
   "devDependencies": {
     "bower": "^1.3.9",
