--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "body-parser": "^1.0.0",
     "compression": "^1.8.1",
+    "errorhandler": "^1.5.2",
     "express": "^3.21.2",
     "express-handlebars": "^3.0.0",
     "moment": "^2.6.0",
