--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "dependencies": {
     "body-parser": "^1.0.0",
     "compression": "^1.8.1",
-    "errorhandler": "^1.5.2",
-    "express": "^3.21.2",
+    "express": "^4.22.1",
     "express-handlebars": "^3.0.0",
     "moment": "^2.6.0",
+    "morgan": "^1.10.1",
     "serve-favicon": "^2.1.3",
     "serve-static": "^2.2.1"
   },
