--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "serve-static": "^2.2.1"
   },
   "engines": {
-    "node": "v20.*"
+    "node": "v24.x"
   },
   "devDependencies": {
     "bower": "^1.3.9",
